# Grokking-as-a-Phase-Transition

./: .gitignore  README.md  pyproject.toml
notebooks/: thermodynamic_analysis.ipynb
results/: addition_s42_p113.csv  addition_s43_p113.csv  addition_s44_p113.csv  grokking_thermo_data.csv
results/sweep/: run1_f020_wd1e1_i05_config.json  run1_f020_wd1e1_i05_results.csv  run2_f020_wd1e2_i05_config.json  run2_f020_wd1e2_i05_results.csv  run3_f025_wd1e1_i05_config.json  run3_f025_wd1e1_i05_results.csv  run4_f025_wd1e2_i03_config.json  run4_f025_wd1e2_i03_results.csv  run5_f015_wd5e2_i05_config.json  run5_f015_wd5e2_i05_results.csv  run6_f030_wd1e1_i03_config.json  run6_f030_wd1e1_i03_results.csv
scripts/: plot_results.py  plot_sweep.py  run_experiments.py  run_sweep.py
src/: data.py  metrics.py  models.py  trainer.py
