[project]
name = "slt-lbp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devinterp==1.3.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "modal>=1.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
